--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,9 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-brand: var(--brand);
+  --color-brand-foreground: var(--brand-foreground);
+  --color-brand-shadow: var(--brand-shadow);
 }
 
 :root {
@@ -76,6 +79,9 @@
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
+  --brand: #0171E3;
+  --brand-foreground: #FFFFFF;
+  --brand-shadow: rgb(1, 113, 227, 0.2);
 }
 
 .dark {
@@ -110,6 +116,9 @@
   --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.551 0.027 264.364);
+  --brand: #0171E3;
+  --brand-foreground: #FFFFFF;
+  --brand-shadow: rgb(1, 113, 227, 0.2);
 }
 
 @layer base {
